--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -1,10 +1,10 @@
 <section class="mt-8">
-  <div class="card bg-black flex flex-row flex-wrap lg:flex-nowrap p-2">
-    <div class="flex-basis-1 lg:flex-basis-5/13 p-3">
-      <form id="gsheet-link-form" class="mb-5 flex flex-row flex-wrap lg:flex-nowrap">
-        <input type="text" name="link" required placeholder="Paste a Google Sheet link" class="flex-1 interactable" style="min-width: 20rem;">
+  <div class="card bg-black flex flex-row flex-wrap md:flex-nowrap">
+    <div class="flex-basis-1 md:flex-basis-5/13 p-3 pl-5 pt-5">
+      <form id="gsheet-link-form" class="mb-5 flex flex-col lg:flex-row items-stretch" style="row-gap: 0.5rem">
+        <input type="text" name="link" required placeholder="Paste a Google Sheet link" class="flex-1 interactable">
 
-        <button class="bg-green text-white interactable" type="submit" style="width: 100%">Import</button>
+        <button class="bg-green text-white interactable" type="submit">Import</button>
       </form>
       <p class="text-center text-xs mb-2">OR</p>
       <p class="text-center leading-tight">
@@ -12,11 +12,14 @@
         <a target="_blank" rel="noopener" href="https://docs.google.com/spreadsheets/d/1sPtgHK-dDX5t98qd_6rd8B_YbZrmvobi8nLhQMbRDMM/edit#gid=0">official template</a>
       </p>
     </div>
-    <div class="flex-1 border-t lg:border-t-0 lg:border-l">
+    <div class="flex-1 border-t md:border-t-0 md:border-l mt-2">
       <div class="p-3">
         promo promo promo promo
       </div>
-      <img src="/images/google-sheets-matrix.png" style="width: 100%; min-height: 560px; object-fit: cover; object-position: left;">
+      <img
+        src="<%= Routes.static_path(@conn, "/images/google-sheets-matrix.jpg") %>"
+        style="width: 100%; height: calc(min(100vw, 560px)); object-fit: cover; object-position: left;"
+      >
     </div>
   </div>
 </section>
