--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -25,7 +25,6 @@
 </section>
 
 <script type="text/javascript">
-const sheetPageUrl = "<%= Routes.page_url(@conn, :sheet) %>";
 const form = document.getElementById('gsheet-link-form');
 form.elements.link.addEventListener('input', evt => {
   evt.target.setCustomValidity('');
@@ -36,7 +35,7 @@ form.addEventListener('submit', evt => {
   const href = input.value;
   const match = /(?:https?:\/\/)?docs.google.com\/spreadsheets\/d\/([^/]*)/.exec(href);
   if (match) {
-    window.location = `${sheetPageUrl}?id=${match[1]}`;
+    window.location = `${window.pageRoutes.sheet}?id=${match[1]}`;
   } else {
     input.setCustomValidity('Not recognized as a Google Sheet URL');
   }
