--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -196,6 +196,10 @@ a {
   border-color: rgba(251, 191, 36, 1);
 }
 
+.border-blue-500 {
+  border-color: rgba(36, 131, 191, 1);
+}
+
 .bg-black {
   background-color: black;
 }
@@ -341,6 +345,23 @@ a {
   margin-bottom: 2rem;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-16 {
+  width: 16rem;
+}
+
 /* custom */
 .text-oneline {
   text-overflow: ellipsis;
@@ -370,6 +391,21 @@ input {
 
   &.interactable:hover {
     background-color: var(--color-primary-surface);
+  }
+}
+
+textarea {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  // resize: vertical;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+
+  &.json {
+    line-height: 1.1;
+    font-size: 0.875rem;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
   }
 }
 
@@ -480,4 +516,7 @@ button {
   color: #a94442;
   display: block;
   margin: -1rem 0 2rem;
+}
+button.active {
+  border: rgba(36, 131, 191, 1) solid 1px;
 }
