--- a/app/lib/app_web/templates/layout/app.html.heex
+++ b/app/lib/app_web/templates/layout/app.html.heex
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="<%= Routes.static_path(@conn, "/apple-touch-icon.png") %>">
-    <link rel="icon" type="image/png" sizes="32x32" href="<%= Routes.static_path(@conn, "/favicon-32x32.png") %>">
-    <link rel="icon" type="image/png" sizes="16x16" href="<%= Routes.static_path(@conn, "/favicon-16x16.png") %>">
-    <link rel="manifest" href="<%= Routes.static_path(@conn, "/manifest.json") %>">
-    <link rel="mask-icon" href="<%= Routes.static_path(@conn, "/safari-pinned-tab.svg") %>" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href={Routes.static_path(@conn, "/apple-touch-icon.png")}>
+    <link rel="icon" type="image/png" sizes="32x32" href={Routes.static_path(@conn, "/favicon-32x32.png")}>
+    <link rel="icon" type="image/png" sizes="16x16" href={Routes.static_path(@conn, "/favicon-16x16.png")}>
+    <link rel="manifest" href={Routes.static_path(@conn, "/manifest.json")}>
+    <link rel="mask-icon" href={Routes.static_path(@conn, "/safari-pinned-tab.svg")} color="#5bbad5">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Datagame</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")} />
     <script type="text/javascript">
     window.pageRoutes = {
       index: "<%= Routes.page_path(@conn, :index) %>",
@@ -26,15 +26,15 @@
       deckUpdate: "<%= Routes.url(@conn) <> Routes.deck_path(@conn, :update, "") %>",
     };
     </script>
-    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/js/app.js")}></script>
   </head>
   <body class="mb-8">
     <header class="bg-black">
       <nav class="flex container align-center">
-        <a href="<%= Routes.page_path(@conn, :index) %>" style="line-height: 0">
+        <a href={Routes.page_path(@conn, :index)} style="line-height: 0">
           <img
             style="height: 55px;"
-            src="<%= Routes.static_path(@conn, "/images/logo1.png") %>"
+            src={Routes.static_path(@conn, "/images/logo1.png")}
             alt="Datagame"
           >
         </a>
