--- a/app/lib/app_web/templates/page/index.html.heex
+++ b/app/lib/app_web/templates/page/index.html.heex
@@ -17,7 +17,7 @@
         promo promo promo promo
       </div>
       <img
-        src="<%= Routes.static_path(@conn, "/images/google-sheets-matrix.jpg") %>"
+        src={Routes.static_path(@conn, "/images/google-sheets-matrix.jpg")}
         style="width: 100%; height: calc(min(100vw, 560px)); object-fit: cover; object-position: left;"
       >
     </div>
