--- a/app/lib/app_web/templates/page/index.html.heex
+++ b/app/lib/app_web/templates/page/index.html.heex
@@ -2,7 +2,7 @@
   <div class="card bg-black flex flex-row flex-wrap md:flex-nowrap">
     <div class="flex-basis-1 md:flex-basis-5/13 p-3 pl-5 pt-5">
       <form id="gsheet-link-form" class="mb-5 flex flex-col lg:flex-row items-stretch" style="row-gap: 0.5rem">
-        <input type="text" name="link" required placeholder="Paste a Google Sheet link" class="flex-1 interactable">
+        <input class="w-full" type="text" name="link" required placeholder="Paste a Google Sheet link" class="flex-1 interactable">
 
         <button class="bg-green text-white interactable" type="submit">Import</button>
       </form>
