--- a/app/lib/app_web/templates/page/sheet-advanced.html.heex
+++ b/app/lib/app_web/templates/page/sheet-advanced.html.heex
@@ -1,5 +1,5 @@
 <section class="mt-8">
-  <div class="flex flex-row align-center pb-2">
+  <div class="flex flex-row items-center pb-2">
     <h2 id="sheet-title" class="text-oneline">Loading decks...</h2>
     <span class="flex-grow" style="width: 1rem;"></span>
     <label for="deck-editor-pw" class="mr-2">Password</label>
