--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -13,13 +13,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code, .font-mono {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-.container {
-  width: 100%
+.container, .fluid .container {
+  max-width: 100%
 }
 
 @media (min-width: 640px) {
@@ -120,7 +120,7 @@ a {
   }
 }
 
-.align-center {
+.items-center {
   align-items: center;
 }
 
@@ -260,6 +260,10 @@ a {
   list-style-position: inside;
 }
 
+.leading-none {
+  line-height: 1;
+}
+
 .leading-tight {
   line-height: 1.25;
 }
@@ -298,6 +302,14 @@ a {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pt-5 {
@@ -350,6 +362,11 @@ a {
   margin-right: 0.25rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .h-full {
   height: 100%;
 }
@@ -360,6 +377,14 @@ a {
 
 .w-16 {
   width: 16rem;
+}
+
+.max-w-4 {
+  max-width: 1rem;
+}
+
+.max-w-6 {
+  max-width: 1.25rem;
 }
 
 /* custom */
@@ -374,6 +399,10 @@ a {
   padding-bottom: 0.375rem;
 }
 
+.viewport-minus-55px {
+  height: calc(100vh - 55px);
+}
+
 /* component defaults */
 .interactable {
   transition: background-color linear 80ms;
@@ -383,7 +412,6 @@ input {
   padding: 0.25rem 0.5rem;
   background-color: var(--color-surface);
   border-radius: 0.25rem;
-  width: 100%;
 
   &.block {
     margin-bottom: 0.5rem;
@@ -413,7 +441,6 @@ select {
   padding: 0.25rem 0.5rem;
   background-color: var(--color-surface);
   border-radius: 0.25rem;
-  min-width: 150px;
 
   &.block {
     margin-bottom: 0.5rem;
@@ -451,15 +478,21 @@ button {
 }
 
 .pagination li {
-  display: inline-block;
   & button {
-    padding: 0.375rem;
+    padding: 0.25rem 0.3125rem;
     min-width: 2.5rem;
     text-align: center;
     border-radius: 0;
+    color: white;
 
-    &.interactable:hover {
+    &.interactable:hover, &.interactable:focus {
       background-color: var(--color-surface);
+    }
+
+    &.disabled {
+      cursor: not-allowed;
+      background-color: var(--color-primary-surface);
+      color: var(--color-pen-faint);
     }
 
     &[active] {
